<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="E_Enum_1" Id="{2a919d5f-7cfe-47a4-9857-fc212430bd40}">
    <Declaration><![CDATA[TYPE E_Enum_1 :
(
	ZERO := 0,
	ONE := 1,
	TWO := 2,
	THREE := 3,
	THIRTEEN := 13,
	the_answer_to_life_the_universe_and_everything := 42
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>