<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_Complex_2" Id="{e3a263a3-b266-46c7-bf3b-e050c8a2f76f}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_Complex_2 :
STRUCT
	c1 		: ST_Complex_1;
	s_5 	: STRING[5]; (*String, max 5 chars*)
	e 		: E_Enum_1;
	s_3 	: STRING[3]; (*String, max 3 chars*)
	cArr 	: ARRAY[0..5] OF ST_Complex_1;
	iArr 	: ARRAY[0..100] OF DINT;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>